# FitnessApp

./: .gitignore  README.MD  env_setup.bat  environment.yml  home.py  pyproject.toml  requirements.txt
database/: fit.db
fitbit/: gather_keys_oauth2.py  get_fitbit_data.py  requirements.txt  streamlit_app_fitbit.py
functions/: __init__.py  app.py  get_google_sheets_data.py  prompts.py  util.py
modules/: __init__.py  duckdb.py  prompts.py  prompts_sql.py  prompts_viz.py  setup_duckdb.py  util.py
pages/: 1_📘_record.py  2_🏋️‍♂️_chatbot.py  3_📈_viz.py
test/: test_duck_db.py  test_streamlit_app.py
util/: env_setup.bat  requirements.txt  update_sql_datatypes.py
