[tool.poetry]
name = "fitness-project"
version = "0.1.0"
description = "A fitness tracker that allows users to record and visualize lift data from workouts, and includes an AI Fitness Advisor chat bot powered by OpenAI's GPT-3.5."
authors = ["Jacob Mennell"]

[tool.poetry.dependencies]
python = "^3.8"
openai = ">=1.0.0"
altair = "==4.1.0"
gspread = "==5.6.2"
gspread_dataframe = "==3.3.0"
numpy = "==1.23.3"
pandas = "==2.2.0"
plotly = "==5.18.0"
pytest = "==8.0.1"
streamlit = "==1.31.0"
duckdb = "==0.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
